--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,16 @@
-.Dictionary {
+.Dictionary section {
   text-align: center;
+  background: #8ec6eb;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 3px 6px rgba(208, 214, 221, 0.7);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  padding: 6px 4px;
+  border-radius: 6px;
+  border: 1 px solid #ddd;
+  color: #333;
 }
