--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,22 @@
+.App {
+  background: #c4cdd3;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
 .App-header {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .App-logo {
-  max-width: 100px;
-  display: block;
-  margin: 0 auto;
+  max-width: 190px;
 }
 
 .App-footer {
   margin: 30px 0;
+}
+
+@media (max-width: 600) {
+  .App {
+    max-width: 400px;
+  }
 }
