--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,7 +1,11 @@
 .Meaning .definition {
-  color: blue;
+  color: rgb(11, 40, 48);
+  font-size: 17px;
+  font-family: arial;
 }
 
 .Meaning .example {
-  opacity: 0.7;
+  opacity: 0.8;
+  color: rgb(60, 143, 211);
+  font-size: 19px;
 }
