--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,22 +1,14 @@
-.Phonetic {
-  height: 60px;
+.Phonetic .audio-link {
+  font-size: 45px;
+  color: rgb(0, 98, 128);
+  transition: all 100ms ease-in-out;
 }
 
-.Phonetic a {
-  border: 1px solid #ddd;
-  text-decoration: none;
-  padding: 20px 10px;
-  border-radius: 20px;
-  margin-right: 10px;
-}
-
-.Phonetic a:hover {
-  background: purple;
-  color: white;
-  transition: all 150ms ease-in-out;
+.Phonetic .audio-link:hover {
+  color: rgb(8, 178, 230);
 }
 
 .Phonetic .text {
-  opacity: 0.7;
-  font-weight: bold;
+  font-size: 32px;
+  color: rgb(8, 53, 66);
 }
