--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
 .App {
-  background: #c4cdd3;
+  background-color: #c7c7d9;
+  background-image: url(./spectrum-gradient.svg);
+  background-attachment: fixed;
+  background-size: cover;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .App-header {
-  margin: 20px 0;
+  margin: 8px 0;
 }
 
 .App-logo {
   max-width: 190px;
+  box-shadow: 0px 7px 7px rgba(137, 142, 148, 0.7);
 }
 
 .App-footer {
