--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,11 +1,11 @@
 .Dictionary section {
   text-align: center;
-  background: rgb(235, 232, 232);
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0px 5px 6px rgba(167, 173, 180, 0.7);
-  margin: 20px 60px;
-  color: rgb(6, 61, 75);
+  background: rgb(218, 207, 207);
+  padding: 10px;
+  border-radius: 12px;
+  box-shadow: 0px 8px 8px rgba(167, 173, 180, 0.7);
+  margin: 20px 30px;
+  opacity: 0.8;
 }
 
 .Dictionary input {
@@ -17,9 +17,9 @@
 }
 
 .Dictionary h1 {
-  color: rgb(86, 82, 90);
-  margin-bottom: 10px;
-  font-size: 34px;
+  color: rgb(46, 43, 49);
+  margin-bottom: 20px;
+  font-size: 30px;
   font-family: Merriweather;
   font-weight: bold;
 }
