--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,6 +1,8 @@
 .Synonyms {
-  margin: 30px 0 0;
+  margin: 20px 0 0;
   padding: 0;
+  font-size: 20px;
+  font-family: sans-serif;
 }
 
 .Synonyms li {
