--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,7 +1,7 @@
 .Synonyms {
-  margin: 20px 0 0;
+  margin: 12px 0px 18px;
   padding: 0;
-  font-size: 20px;
+  font-size: 18px;
   font-family: var(--secondary-font);
   opacity: 0.9;
   color: #2e2b31;
